Slider Area changes

--- a/index.html
+++ b/index.html
@@ -87,39 +87,15 @@
         <!-- Slider Area Start-->
         <div class="slider-area ">
             <div class="slider-active">
-                <div class="single-slider slider-height slider-padding sky-blue d-flex align-items-center">
+                <div class="single-slider slider-padding sky-blue d-flex align-items-center">
                     <div class="container">
                         <div class="row d-flex align-items-center">
                             <div class="col-lg-6 col-md-9 ">
                                 <div class="hero__caption">
                                     <span data-animation="fadeInUp" data-delay=".4s"></span>
-                                    <h1 style ="color:white" data-animation="fadeInUp" data-delay=".6s">Rentlyhood</h1><h2 data-animation="fadeInUp" data-delay=".6s">Renting Simplified, Connections Amplified</h2> 
-                                    <p data-animation="fadeInUp" data-delay=".8s">An online peer-to-peer platform which aims to connect people in close neighbourhoods and enable them to rent, lend and share their household items </p>
-                                    <!-- Slider btn -->
-                                   <div class="slider-btns">
-                                        <!-- Hero-btn -->
-                                        <a data-animation="fadeInLeft" data-delay="1.0s" href="industries.html" class="btn radius-btn">Download</a>
-                                        <!-- Video Btn -->
-                                        <a data-animation="fadeInRight" data-delay="1.0s" class="popup-video video-btn ani-btn" href="https://www.youtube.com/watch?v=1aP-TXUpNoU"><i class="fas fa-play"></i></a>
-                                   </div>
-                                </div>
-                            </div>
-                            <div class="col-lg-6">
-                                <div class="hero__img d-none d-lg-block f-right" data-animation="fadeInRight" data-delay="1s">
-                                    <img src="assets/img/hero/rentlyhood homepage.png" alt="">
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div> 
-                <div class="single-slider slider-height slider-padding sky-blue d-flex align-items-center">
-                    <div class="container">
-                        <div class="row d-flex align-items-center">
-                            <div class="col-lg-6 col-md-9 ">
-                                <div class="hero__caption">
-                                    <span data-animation="fadeInUp" data-delay=".4s">App Landing Page</span>
-                                    <h1 data-animation="fadeInUp" data-delay=".6s">Get things done<br>with Appco</h1>
-                                    <p data-animation="fadeInUp" data-delay=".8s">Dorem ipsum dolor sitamet, consectetur adipiscing elit, sed do eiusm tempor incididunt ulabore et dolore magna aliqua.</p>
+                                    <h1 class="text-white" data-animation="fadeInUp" data-delay=".6s">Rentlyhood</h1>
+                                    <h2 class="text-white" data-animation="fadeInUp" data-delay=".6s">Renting Simplified, Connections Amplified</h2> 
+                                    <p class="text-white" data-animation="fadeInUp" data-delay=".8s">An online peer-to-peer platform which aims to connect people in close neighbourhoods and enable them to rent, lend and share their household items </p>
                                     <!-- Slider btn -->
                                    <div class="slider-btns">
                                         <!-- Hero-btn -->
