Price section update

--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
                                 </div>
                             </div>
                              <div class="col-xl-6 col-lg-6 col-md-6">
-                                <div class="single-features mb-70">
+                                <div class="single-features">
                                     <div class="features-icon">
                                         <span class="flaticon-support"></span>
                                     </div>
@@ -277,7 +277,7 @@
                 <div class="row d-flex justify-content-center">
                     <div class="col-lg-6 col-md-8">
                         <div class="section-tittle section-tittle2 text-center">
-                            <h2>Choose Your Very Best Pricing Plan.</h2>
+                            <h2>How Rentlyhood Works</h2>
                         </div>
                     </div>
                 </div>
@@ -288,52 +288,35 @@
         <div class="pricing-card-area">
             <div class="container">
                 <div class="row">
-                    <div class="col-xl-4 col-lg-4 col-md-6">
+                    <div class="col-xl-6 col-lg-6 col-md-6">
                         <div class="single-card text-center mb-30">
                             <div class="card-top">
-                                <span>2 Years</span>
-                                <h4>$05 <span>/ month</span></h4>
+                                <h4>How to rent?</h4>
+                                <img src="assets/img/shape/available-app.png" style="max-width: 100%;">
                             </div>
-                            <div class="card-bottom">
+                            <div class="card-bottom text-left">
                                 <ul>
-                                    <li>Increase traffic 50%</li>
-                                    <li>E-mail support</li>
-                                    <li>10 Free Optimization</li>
-                                    <li>24/7  support</li>
+                                    <li>Download the Rentlyhood app and sign up</li>
+                                    <li>Search for the required item</li>
+                                    <li>Choose dates and submit the booking request</li>
+                                    <li>Make payment once lender approves booking request</li>
                                 </ul>
                                 <a href="services.html" class="btn card-btn1">Get Started</a>
                             </div>
                         </div>
                     </div>
-                    <div class="col-xl-4 col-lg-4 col-md-6">
-                        <div class="single-card  text-center mb-30">
-                            <div class="card-top">
-                                <span>2 Years</span>
-                                <h4>$05 <span>/ month</span></h4>
-                            </div>
-                            <div class="card-bottom">
-                                <ul>
-                                    <li>Increase traffic 50%</li>
-                                    <li>E-mail support</li>
-                                    <li>10 Free Optimization</li>
-                                    <li>24/7  support</li>
-                                </ul>
-                                <a href="services.html" class="btn card-btn1">Get Started</a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-xl-4 col-lg-4 col-md-6">
+                    <div class="col-xl-6 col-lg-6 col-md-6">
                         <div class="single-card text-center mb-30">
                             <div class="card-top">
-                                <span>2 Years</span>
-                                <h4>$05 <span>/ month</span></h4>
+                                <h4>How to lend?</h4>
+                                <img src="assets/img/shape/available-app.png" style="max-width: 100%;">
                             </div>
-                            <div class="card-bottom">
+                            <div class="card-bottom text-left">
                                 <ul>
-                                    <li>Increase traffic 50%</li>
-                                    <li>E-mail support</li>
-                                    <li>10 Free Optimization</li>
-                                    <li>24/7  support</li>
+                                    <li>Download the Rentlyhood app and sign up</li>
+                                    <li>Search for the required item</li>
+                                    <li>Choose dates and submit the booking request</li>
+                                    <li>Make payment once lender approves booking request</li>
                                 </ul>
                                 <a href="services.html" class="btn card-btn1">Get Started</a>
                             </div>
