CEO majduri - lend works

--- a/index.html
+++ b/index.html
@@ -314,9 +314,10 @@
                             <div class="card-bottom text-left">
                                 <ul>
                                     <li>Download the Rentlyhood app and sign up</li>
-                                    <li>Search for the required item</li>
-                                    <li>Choose dates and submit the booking request</li>
-                                    <li>Make payment once lender approves booking request</li>
+                                    <li>Switch to Lender profile and click 'Create New Listing'</li>
+                                    <li>Enter details of item and upload photos</li>
+                                    <li>Submit for Approval</li>
+                             
                                 </ul>
                                 <a href="services.html" class="btn card-btn1">Get Started</a>
                             </div>
