--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
                     <div class="col-xl-6 col-lg-6 col-md-6">
                         <div class="single-card text-center mb-30">
                             <div class="card-top">
-                                <h4>How to lend?</h4>
+                                <h4>How to Lend?</h4>
                                 <img src="assets/img/shape/available-app.png" style="max-width: 100%;">
                             </div>
                             <div class="card-bottom text-left">
