--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@
                         <div class="single-card text-center mb-30">
                             <div class="card-top">
                                 <h4>How to rent?</h4>
-                                <img src="assets/img/shape/available-app.png" style="max-width: 100%;">
+                                <img src="assets/img/shape/Photo Sharing-bro.png" style="max-width: 100%;">
                             </div>
                             <div class="card-bottom text-left">
                                 <ul>
@@ -309,7 +309,7 @@
                         <div class="single-card text-center mb-30">
                             <div class="card-top">
                                 <h4>How to Lend?</h4>
-                                <img src="assets/img/shape/available-app.png" style="max-width: 100%;">
+                                <img src="assets/img/shape/App monetization-pana.png" style="max-width: 100%;">
                             </div>
                             <div class="card-bottom text-left">
                                 <ul>
