Updated index.html and removed unwanted images

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                         <div class="row">
                             <div class="col-lg-10 col-md-10">
                                 <div class="section-tittle">
-                                    <h2>Some of the best features Of Our App!</h2>
+                                    <h2>Why Rentlyhood?</h2>
                                 </div>
                             </div>
                         </div>
@@ -190,7 +190,7 @@
                 <div class="row d-flex justify-content-center">
                     <div class="col-lg-6">
                         <div class="section-tittle text-center">
-                            <h2>Three core pillars of Rentlyhood</h2>
+                            <h2 class="text-white">Three core pillars of Rentlyhood</h2>
                         </div>
                     </div>
                 </div>
@@ -199,7 +199,7 @@
                     <div class="col-xl-4 col-lg-4 col-md-6">
                         <div class="services-caption text-center mb-30">
                             <div class="service-icon">
-                                <span class="flaticon-businessman"></span>
+                                <span><img style="width: 100px;" src="assets/img/shape/running girl - rent.png"></span>
                             </div> 
                             <div class="service-cap">
                                 <h2><a href="#">RENT</a></h2>
@@ -213,7 +213,7 @@
                                 <span class="flaticon-businessman"></span>
                             </div> 
                             <div class="service-cap">
-                                <h2><a href="#">Lend</a></h2>
+                                <h2><a href="#">LEND</a></h2>
                                 <h5>Your extra items,<br>Help others,<br>Earn some cash</h5>
                             </div>
                         </div>
@@ -240,8 +240,8 @@
                     <!-- slider Heading -->
                     <div class="col-xl-4 col-lg-4 col-md-8">
                         <div class="single-cases-info mb-30">
-                            <h3>Applic Apps<br> Screenshot</h3>
-                            <p>Lorem ipsum dolor sit amet, consecadipiscing elit, sed do eiusmod tempor incididunt ut ore et dolore magna aliqua. Quis ipsum suspendisse gravida. Risus commodo viverra maecenasan lacus vel facilisis. </p>
+                            <h3>Need some ideas?</h3>
+                            <p>Here are some items that you can rent or lend on Rentlyhood</p>
                         </div>
                     </div>
                     <!-- OwL -->
@@ -294,12 +294,12 @@
                             </div>
                             <div class="card-bottom text-left">
                                 <ul class="mx-3">
-                                    <li>Download the Rentlyhood app and sign up</li>
-                                    <li>Search for the required item</li>
+                                    <li>Search for the item on Rentlyhood app</li>
                                     <li>Choose dates and submit the booking request</li>
                                     <li>Make payment once lender approves booking request</li>
                                 </ul>
-                                <a href="https://www.instagram.com/reel/Cs4EHYDo_5w/?utm_source=ig_web_copy_link&igshid=MzRlODBiNWFlZA==" target="_blank" class="btn card-btn1">Get Started</a>
+                                <!-- <a href="https://www.instagram.com/reel/Cs4EHYDo_5w/?utm_source=ig_web_copy_link&igshid=MzRlODBiNWFlZA==" target="_blank" class="btn card-btn1"><i class="fas fa-play p-0 m-0"></i> Watch Tutorial</a> -->
+                                <a data-animation="fadeInRight" data-delay="1.0s" class="popup-video btn rent-lend-play-btn ani-btn" href="https://www.instagram.com/reel/Cs4EHYDo_5w/?utm_source=ig_web_copy_link&igshid=MzRlODBiNWFlZA==" target="_blank"><i class="fas fa-play"></i> &ensp; Watch Tutorial</a>
                             </div>
                         </div>
                     </div>
@@ -311,13 +311,12 @@
                             </div>
                             <div class="card-bottom text-left">
                                 <ul class="mx-3">
-                                    <li>Download the Rentlyhood app and sign up</li>
-                                    <li>Switch to Lender profile and click 'Create New Listing'</li>
+                                    <li>In lender profile of Rentlyhood app, click 'Create New Listing'</li>
                                     <li>Enter details of item and upload photos</li>
                                     <li>Submit for Approval</li>
                              
                                 </ul>
-                                <a href="https://www.instagram.com/reel/CtbsjNnI9lg/?utm_source=ig_web_copy_link&igshid=MzRlODBiNWFlZA==" target="_blank" class="btn card-btn1">Get Started</a>
+                                <a href="https://www.instagram.com/reel/CtbsjNnI9lg/?utm_source=ig_web_copy_link&igshid=MzRlODBiNWFlZA==" target="_blank" class="popup-video btn rent-lend-play-btn ani-btn"><i class="fas fa-play"></i> &ensp; Watch Tutorial</a>
                             </div>
                         </div>
                     </div>
