--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
                             <div class="col-xl-6 col-lg-6 col-md-6">
                                 <div class="single-features mb-70">
                                     <div class="features-icon">
-                                        <span class="flaticon-support"></span>
+                                        <span><img style="width: 40px; height:40px;" src="assets/img/shape/feature icon.png"></span>
                                     </div>
                                     <div class="features-caption">
                                         <h3>Zero cost</h3>
@@ -143,7 +143,7 @@
                              <div class="col-xl-6 col-lg-6 col-md-6">
                                 <div class="single-features mb-70">
                                     <div class="features-icon">
-                                        <span class="flaticon-support"></span>
+                                        <span><img style="width: 40px; height:40px;" src="assets/img/shape/feature icon.png"></span>
                                     </div>
                                     <div class="features-caption">
                                         <h3>Rentlyhood Guarantee</h3>
@@ -154,7 +154,7 @@
                             <div class="col-xl-6 col-lg-6 col-md-6">
                                 <div class="single-features mb-70">
                                     <div class="features-icon">
-                                        <span class="flaticon-support"></span>
+                                        <span><img style="width: 40px; height:40px;" src="assets/img/shape/feature icon.png"></span>
                                     </div>
                                     <div class="features-caption">
                                         <h3>Community Building</h3>
@@ -165,7 +165,7 @@
                              <div class="col-xl-6 col-lg-6 col-md-6">
                                 <div class="single-features">
                                     <div class="features-icon">
-                                        <span class="flaticon-support"></span>
+                                        <span><img style="width: 40px; height:40px;" src="assets/img/shape/feature icon.png"></span>
                                     </div>
                                     <div class="features-caption">
                                         <h3>Care for Environment</h3>
@@ -199,7 +199,7 @@
                     <div class="col-xl-4 col-lg-4 col-md-6">
                         <div class="services-caption text-center mb-30">
                             <div class="service-icon">
-                                <span><img style="width: 100px;" src="assets/img/shape/running girl - rent.png"></span>
+                                <span><img style="width: 90px;" src="assets/img/shape/give-gift.png"></span>
                             </div> 
                             <div class="service-cap">
                                 <h2><a href="#">RENT</a></h2>
@@ -210,7 +210,7 @@
                     <div class="col-xl-4 col-lg-4 col-md-6">
                         <div class="services-caption text-center mb-30">
                             <div class="service-icon">
-                                <span class="flaticon-businessman"></span>
+                                <span><img style="width: 100px;" src="assets/img/shape/forgive.png"></span>
                             </div> 
                             <div class="service-cap">
                                 <h2><a href="#">LEND</a></h2>
@@ -221,7 +221,7 @@
                     <div class="col-xl-4 col-lg-4 col-md-6">
                         <div class="services-caption text-center mb-30">
                             <div class="service-icon">
-                                <span class="flaticon-plane"></span>
+                                <span><img style="width: 90px;" src="assets/img/shape/save-the-planet.png"></span>
                             </div> 
                             <div class="service-cap">
                                 <h2><a href="#">CARE</a></h2>
@@ -407,7 +407,7 @@
                     </div>
                     <div class="col-xl-6 col-lg-6">
                         <div class="app-img">
-                            <img src="assets/img/shape/available-app.png" alt="">
+                            <img src="assets/img/shape/open-an-online-store.png" alt="">
                         </div>
                     </div>
                 </div>
