--- a/index.html
+++ b/index.html
@@ -248,19 +248,46 @@
                     <div class="col-xl-8 col-lg-8 col-md-col-md-7">
                         <div class="app-active owl-carousel"> 
                             <div class="single-cases-img">
-                                <img src="assets/img/gallery/App1.png" alt="">
+                                <img src="assets/img/gallery/3.png" alt="">
                             </div>
                             <div class="single-cases-img">
-                                <img src="assets/img/gallery/App2.png" alt="">
+                                <img src="assets/img/gallery/4.png" alt="">
                             </div>
                             <div class="single-cases-img">
-                                <img src="assets/img/gallery/App3.png" alt="">
+                                <img src="assets/img/gallery/5.png" alt="">
                             </div>
                             <div class="single-cases-img">
-                                <img src="assets/img/gallery/App2.png" alt="">
+                                <img src="assets/img/gallery/1.png" alt="">
                             </div>
                             <div class="single-cases-img">
-                                <img src="assets/img/gallery/App1.png" alt="">
+                                <img src="assets/img/gallery/2.png" alt="">
+                            </div>
+                            <div class="single-cases-img">
+                                <img src="assets/img/gallery/6.png" alt="">
+                            </div>
+                            <div class="single-cases-img">
+                                <img src="assets/img/gallery/7.png" alt="">
+                            </div>
+                            <div class="single-cases-img">
+                                <img src="assets/img/gallery/8.png" alt="">
+                            </div>
+                            <div class="single-cases-img">
+                                <img src="assets/img/gallery/9.png" alt="">
+                            </div>
+                            <div class="single-cases-img">
+                                <img src="assets/img/gallery/10.png" alt="">
+                            </div>
+                            <div class="single-cases-img">
+                                <img src="assets/img/gallery/11.png" alt="">
+                            </div>
+                            <div class="single-cases-img">
+                                <img src="assets/img/gallery/12.png" alt="">
+                            </div>
+                            <div class="single-cases-img">
+                                <img src="assets/img/gallery/13.png" alt="">
+                            </div>
+                            <div class="single-cases-img">
+                                <img src="assets/img/gallery/14.png" alt="">
                             </div>
                         </div>
                     </div>
