rent lend care small

--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
                             </div> 
                             <div class="service-cap">
                                 <h2><a href="#">RENT</a></h2>
-                                <h5>What you need,<br>When you need,<br>Without having to buy</h5>
+                                <h5>what you need,<br>when you need,<br>without having to buy</h5>
                             </div>
                         </div>
                     </div>
@@ -214,7 +214,7 @@
                             </div> 
                             <div class="service-cap">
                                 <h2><a href="#">LEND</a></h2>
-                                <h5>Your extra items,<br>Help others,<br>Earn some cash</h5>
+                                <h5>your extra items,<br>help others,<br>earn some cash</h5>
                             </div>
                         </div>
                     </div>
@@ -225,7 +225,7 @@
                             </div> 
                             <div class="service-cap">
                                 <h2><a href="#">CARE</a></h2>
-                                <h5>For planet,<br>Support sustainability,<br>Make a difference</h5>
+                                <h5>for planet,<br>support sustainability,<br>make a difference</h5>
                             </div>
                         </div>
                     </div>
