--- a/index.html
+++ b/index.html
@@ -487,7 +487,7 @@
                              </div>
                              <div class="footer-tittle">
                                  <div class="footer-pera">
-                                     <p class="info1">Lorem ipsum dolor sit amet, consectetur adipisicing elit sed do eiusmod tempor incididunt ut labore.</p>
+                                     <!--<p class="info1">Lorem ipsum dolor sit amet, consectetur adipisicing elit sed do eiusmod tempor incididunt ut labore.</p> -->
                                 </div>
                              </div>
                          </div>
@@ -497,11 +497,11 @@
                             <div class="footer-tittle">
                                 <h4>Quick Links</h4>
                                 <ul>
-                                    <li><a href="#">About</a></li>
-                                    <li><a href="#">Features</a></li>
-                                    <li><a href="#">Pricing</a></li>
-                                    <li><a href="#">Download</a></li>
-                                    <li><a href="#">Reviews</a></li>
+                                    <li><image src = "assets/img/logo/inst png.png">&nbsp;&nbsp;</image><a href="https://www.instagram.com/rentlyhood/">Instagram</a></li>
+                                    <li><a href="https://www.tiktok.com/@rentlyhood">TikTok</a></li>
+                                    <li><a href="https://apps.apple.com/ie/app/rentlyhood/id6447560745">Apple App Store</a></li>
+                                    <li><a href="https://play.google.com/store/apps/details?id=com.rentlyhood.android&gl=IE">Google Play Store</a></li>
+                              
                                 </ul>
                             </div>
                         </div>
@@ -511,30 +511,29 @@
                             <div class="footer-tittle">
                                 <h4>Support</h4>
                                 <ul>
-                                    <li><a href="#">Report a bug</a></li>
-                                    <li><a href="#">Privacy Policy</a></li>
-                                    <li><a href="#">Terms & Conditions</a></li>
-                                    <li><a href="#">Sitemap</a></li>
-                                    <li><a href="#">FAQs</a></li>
+                                    <li><a href="#">+353 899 512 148</a></li>
+                                    <li><a href="mailto:">contact@rentlyhood.com</a></li>
+                                    <li><a href="https://www.rentlyhood.com/terms_conditions.html">Terms & Conditions</a></li>
+                                    <li><a href="https://www.rentlyhood.com/privacy_policy.html">Privacy Policy</a></li>
                                 </ul>
                             </div>
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-6 col-sm-8">
                         <div class="single-footer-caption mb-50">
-                            <div class="footer-tittle">
-                                <h4>Newsletter</h4>
+                             <div class="footer-tittle">
+                                   <!-- <h4>Newsletter</h4> -->
                                 <div class="footer-pera footer-pera2">
-                                 <p>Heaven fruitful doesn't over lesser in days. Appear </p>
+                                   <!--  <p>Heaven fruitful doesn't over lesser in days. Appear </p> -->
                              </div>
                              <!-- Form -->
                              <div class="footer-form">
                                  <div id="mc_embed_signup">
                                      <form target="_blank" action="https://spondonit.us12.list-manage.com/subscribe/post?u=1462626880ade1ac87bd9c93a&amp;id=92a4423d01" method="get" class="subscribe_form relative mail_part" novalidate="true">
-                                         <input type="email" name="EMAIL" id="newsletter-form-email" placeholder=" Email Address " class="placeholder hide-on-focus" onfocus="this.placeholder = ''" onblur="this.placeholder = ' Email Address '">
+                                         <!-- <input type="email" name="EMAIL" id="newsletter-form-email" placeholder=" Email Address " class="placeholder hide-on-focus" onfocus="this.placeholder = ''" onblur="this.placeholder = ' Email Address '">
                                          <div class="form-icon">
                                              <button type="submit" name="submit" id="newsletter-submit" class="email_icon newsletter-submit button-contactForm"><img src="assets/img/shape/form_icon.png" alt=""></button>
-                                         </div>
+                                         </div> -->
                                          <div class="mt-10 info"></div>
                                      </form>
                                  </div>
@@ -543,13 +542,13 @@
                         </div>
                     </div>
                 </div>
-                <!-- Copy-Right -->
+              
                 <div class="row align-items-center">
                     <div class="col-xl-12 ">
                         <div class="footer-copy-right">
-                           <p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-  Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="ti-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
-  <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
+                           <p style="text-align:center">
+  Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This website is made with <i class="ti-heart" aria-hidden="true"></i> by <a href="https://www.theglitterz.com/" target="_blank">Glitterz</a>
+ </p>
                         </div>
                     </div>
                 </div>
