--- a/index.html
+++ b/index.html
@@ -493,10 +493,10 @@
                             <div class="footer-tittle">
                                 <h4>Socials</h4>
                                 <ul>
-                                    <li><img src="/assets/img/logo/inst png.png"> <a href="https://www.instagram.com/rentlyhood/">Instagram</a></li>
+                                    <li> <a href="https://www.instagram.com/rentlyhood/">Instagram</a></li>
                                     <li><a href="https://www.tiktok.com/@rentlyhood">TikTok</a></li>
                                     <li><a href="https://apps.apple.com/ie/app/rentlyhood/id6447560745">Apple App Store</a></li>
-                                    <li> <img src="/assets/img/gallery/1.png"><a href="https://play.google.com/store/apps/details?id=com.rentlyhood.android&gl=IE">Google Play Store</a></li>
+                                    <li><a href="https://play.google.com/store/apps/details?id=com.rentlyhood.android&gl=IE">Google Play Store</a></li>
                               
                                 </ul>
                             </div>
