--- a/index.html
+++ b/index.html
@@ -519,8 +519,8 @@
                              <div class="footer-tittle">
                                    <h4>Important Links</h4>
                                <ul>
-                                <li><a href="https://www.rentlyhood.com/terms_conditions.html">Terms & Conditions</a></li>
-                                <li><a href="https://www.rentlyhood.com/privacy_policy.html">Privacy Policy</a></li>
+                                <li><a href="https://theglitterz.github.io/Rentlyhood_Webpage/terms_conditions.html">Terms & Conditions</a></li>
+                                <li><a href="https://theglitterz.github.io/Rentlyhood_Webpage/privacy_policy.html">Privacy Policy</a></li>
                             </ul>
                                   
                              </div>
