update new pages

--- a/index.html
+++ b/index.html
@@ -519,8 +519,9 @@
                              <div class="footer-tittle">
                                    <h4>Important Links</h4>
                                <ul>
-                                <li><a href="https://theglitterz.github.io/Rentlyhood_Webpage/terms_conditions.html">Terms & Conditions</a></li>
-                                <li><a href="https://theglitterz.github.io/Rentlyhood_Webpage/privacy_policy.html">Privacy Policy</a></li>
+                                <li><a href="terms_conditions.html">Terms & Conditions</a></li>
+                                <li><a href="privacy_policy.html">Privacy Policy</a></li>
+                                <li><a href="eula.html">EULA</a></li>
                             </ul>
                                   
                              </div>
